--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,11 @@
   --bgc: #ffffff;
   --secondbgc: #f4f4fd;
   --secondbgcbtn: #404bbf;
+  --bgcbtnfilter: #e7e9fc;;
+  --hero-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  --hero-shadow-hover: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .accent {
@@ -40,7 +45,7 @@ img {
 }
 
 .section:first-of-type {
-  background-color: #2e2f42;
+  background-color: var(--main-color);
   text-align: center;
 }
 
@@ -67,7 +72,7 @@ body {
 /*--------------------- head */
 
 .header {
-  border-bottom: 1px solid #e7e9fc;
+  border-bottom: 1px solid var(--bgcbtnfilter);
 }
 
 .container.head,
@@ -77,7 +82,9 @@ body {
 
 .link.current {
   color: var(--text-color);
-  background-color: rgba(109, 106, 106, 0.116);
+  border-bottom: 4px solid var(--secondbgcbtn);
+  color: var(--secondbgcbtn);
+   
 }
 
 /*--------------------- logo */
@@ -107,7 +114,7 @@ body {
 }
 .link:hover,
 .link:focus {
-  color: var(--text-color);
+  color: var(--secondbgcbtn);
 }
 .link:active {
   color: var(--accent-color);
@@ -150,7 +157,7 @@ body {
   font-size: 56px;
   line-height: 1.07;
   letter-spacing: 0.02em;
-  color: #ffffff;
+  color: var(--bgc);
   margin-bottom: 48px;
   display: flex;
   width: 500px;
@@ -169,21 +176,20 @@ body {
   letter-spacing: 0.04em;
   padding: 16px 32px;
 
-  color: #ffffff;
-  background-color: #4d5ae5;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  cursor: pointer;
+  color: var(--bgc);
+  background-color: var(--accent-color);
+  box-shadow: var(--hero-box-shadow);
   border-radius: 4px;
   border: none;
 }
 
-.hero-button:active {
-  background-color: var(--secondbgcbtn);
-}
 
 .hero-button:hover,
-.hero-button:focus {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+.hero-button:focus,
+.hero-button:active {
+  background-color: var(--secondbgcbtn);
+  box-shadow: var(--hero-shadow-hover);
 }
 
 /* --------------------- Features */
@@ -250,8 +256,7 @@ body {
 }
 
 .team-list {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  box-shadow: var(--hero-shadow-hover);
   border-radius: 0px 0px 4px 4px;
 }
 
@@ -284,7 +289,7 @@ body {
 }
 
 .end-page {
-  color: #e7e9fc;
+  color: var(--bgcbtnfilter);
   max-width: 264px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -298,7 +303,7 @@ body {
   line-height: 1.33;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #ffffff;
+  color: var(--bgc)
 }
 
 /*--------------------- Portfolio */
@@ -312,15 +317,15 @@ body {
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: var(--accent-color);
-  background-color: #e7e9fc;
-  border: 1px solid #f4f4fd;
+  background-color: var(--bgcbtnfilter);
+  border: 1px solid var(--secondbgc);
   border-radius: 4px;
   padding: 12px 24px;
 }
 
 .filter-button:hover {
-  color: #ffffff;
-  background-color: #404bbf;
+  color: var(--bgc);
+  background-color: var(--secondbgcbtn);
   cursor: pointer;
   transition: 1s;
 }
@@ -347,7 +352,7 @@ body {
 .cards {
   margin-right: 21px;
   margin-bottom: 48px;
-  border: 1px solid #e7e9fc;
+  border: 1px solid var(--bgcbtnfilter);
 }
 
 .project-name {
