--- a/css/styles.css
+++ b/css/styles.css
@@ -164,14 +164,10 @@ color: var(--secondbgcbtn);
   margin-right: auto;
 } 
 
-.hero{
+.hero {
   background-color: var(--main-color);
-}
-
-.hero > .container {
   padding: 188px 0;
-  text-align: center;
-  text-align: center;
+  text-align: center; 
 }
 
 .hero-button {
@@ -347,20 +343,20 @@ flex-basis: calc((100% -24*3)/4);
 .filter {
   display: flex;
   justify-content: center;
-  margin-top: 96px;
 }
 
 /*--------------------- Main */
-
+.container.project {
+  padding-top: 96px;
+}
 .projects {
   display: flex;
   flex-wrap: wrap;
   margin-top: 72px;
+  gap: 48px 24px  ;
 }
 
 .cards {
-  margin-right: 24px;
-  margin-bottom: 48px;
   flex-basis: calc((100% - 2 * 24px) / 3);
 }
 
@@ -375,15 +371,8 @@ border-bottom: 1px solid var(--bgcbtnfilter);
 
 
 .project-text {
-  line-height: 1.5px;
+  line-height: 1.5;
   letter-spacing: 0.02em;
-  margin-top: 15px;
+  margin-top: 8px;
 }
 
-.cards:nth-child(3n) {
-  margin-right: 0;
-}
-
-.cards:nth-last-child(-n + 3) {
-  margin-bottom: 0;
-}
